actors swagger
